<resources>
    <string name="app_name">Hanmo</string>

    <string name="createRealm">first</string>
    <string name="item_all_delete">아이템 <font color='#54a2fe'>모두 삭제</font></string>
    <string name="item_add">+ 추가하기</string>
    <string name="txt_tech_name">기술명</string>
    <string name="txt_tech_content">기술 내용</string>
    <string name="search_hint">search..</string>
    <string name="signup_name">이름</string>
    <string name="signup_id">아이디</string>
    <string name="signup_pwd">비밀번호</string>
    <string name="signup_confirm_pwd">비밀번호 확인</string>
    <string name="signup">회원가입</string>
    <string name="signin">로그인</string>

</resources>
