<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sign_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="@dimen/margin_signup"
                android:layout_marginTop="40dp"
                android:text="회원가입"
                android:textSize="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_signup"
                android:layout_marginTop="35dp"
                android:text="@string/signup_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_label" />

            <ImageView
                android:id="@+id/check_name"
                android:layout_width="@dimen/size_signup_check_icon"
                android:layout_height="@dimen/size_signup_check_icon"
                android:layout_marginEnd="@dimen/margin_signup"
                android:src="@drawable/ic_signup_warning"
                app:layout_constraintBottom_toTopOf="@+id/et_name"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_signup"
                android:layout_marginStart="@dimen/margin_signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:text="@string/signup_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name" />

            <ImageView
                android:id="@+id/check_id"
                android:layout_width="@dimen/size_signup_check_icon"
                android:layout_height="@dimen/size_signup_check_icon"
                android:layout_marginEnd="@dimen/margin_signup"
                android:src="@drawable/ic_signup_warning"
                app:layout_constraintBottom_toTopOf="@+id/et_id"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginEnd="@dimen/margin_signup"
                android:layout_marginStart="@dimen/margin_signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_signup"
                android:layout_marginTop="20dp"
                android:text="@string/signup_pwd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_id" />

            <ImageView
                android:id="@+id/check_pwd"
                android:layout_width="@dimen/size_signup_check_icon"
                android:layout_height="@dimen/size_signup_check_icon"
                android:layout_marginEnd="@dimen/margin_signup"
                android:src="@drawable/ic_signup_warning"
                app:layout_constraintBottom_toTopOf="@+id/et_pwd"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/et_pwd"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_signup"
                android:layout_marginStart="@dimen/margin_signup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_signup"
                android:layout_marginTop="20dp"
                android:text="@string/signup_confirm_pwd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_pwd" />

            <ImageView
                android:id="@+id/check_confirm_pwd"
                android:inputType="textPassword"
                android:layout_width="@dimen/size_signup_check_icon"
                android:layout_height="@dimen/size_signup_check_icon"
                android:layout_marginEnd="@dimen/margin_signup"
                android:src="@drawable/ic_signup_warning"
                app:layout_constraintBottom_toTopOf="@+id/et_confirm_pwd"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/et_confirm_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginEnd="@dimen/margin_signup"
                android:layout_marginStart="@dimen/margin_signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_signup"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_admin_btn"
                android:enabled="false"
                android:text="@string/signup"
                android:transitionName="SignUpButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_confirm_pwd" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>